# crates

surreal-error-parse/: Cargo.toml
surreal-error-parser/: Cargo.toml
surreal-error-parser/src/: lib.rs
surreal-error-parser/str-pattern-macro/: Cargo.toml
surreal-error-parser/str-pattern-macro/src/: lib.rs
surrealdb-query-builder/: Cargo.toml
surrealdb-query-builder/src/: filters.rs  lib.rs  operator.rs  order_dir.rs  query_options.rs
