[package]
name = "surrealdb-query-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
serde = "1.0.193"
rust_decimal = "1.33.1"
surrealdb-nightly = { version = "1.4.20240315", features = ["kv-mem"] }

[dev-dependencies]
tokio = "1.33.0"
